# crypto-buddy

./: .env  .gitignore  LICENSE  README.md  pyproject.toml  run.sh
data/: bitcoin_data.csv  bitcoin_model.pth  bitcoin_normalization_stats.pt  dogecoin_data.csv  dogecoin_model.pth  dogecoin_normalization_stats.pt  ethereum_data.csv  ethereum_normalization_stats.pt  model.pth  normalization_stats.pt  polkadot_data.csv  polkadot_model.pth  polkadot_normalization_stats.pt  solana_data.csv  solana_model.pth  solana_normalization_stats.pt
scripts/: cli.py  get_data.py  predict.py  train.py
src/data_gatherers/: __init__.py  data_collector.py  dataset.py
src/model/: lstm.py
test/: test_data.py  test_model.py
