[project]
name = "crypto-buddy"
version = "0.1.0"
description = "LSTM model, trained to predict next stocks market predictions"
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [
  { name = "w1ndrunn3rr", email = "w1ndrunn3rr@gmail.com" },
]

# Konwersja z ^ (caret) na widełki >=,< kolejnej głównej wersji
dependencies = [
  "dotenv>=0.9.9,<1.0.0",
  "pytest>=8.3.5,<9.0.0",
  "pandas>=2.2.3,<3.0.0",
  "torch>=2.6.0,<3.0.0",
  "scikit-learn>=1.6.1,<2.0.0",
  "pydantic>=2.11.3,<3.0.0",
  "requests>=2.32.3,<3.0.0",
  "tqdm>=4.67.1,<5.0.0",
  "click>=8.1.8,<9.0.0",
  "hydra-core>=1.3.2,<2.0.0",
]

[project.scripts]
predict = "scripts.cli:cli_predict"
train = "scripts.cli:cli_train"
getdata = "scripts.cli:cli_get_data"

[tool.pytest.ini_options]
python_files = "test_*.py"
testpaths = ["test"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"